# kur

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  weatherservice.cpp  weatherservice.hpp
test/: CMakeLists.txt
test/test_src/: mainwindow_test.cpp  weatherservice_test.cpp  weatherservice_test.hpp
test_src/: mainwindow_test.cpp  mainwindow_test.hpp  weatherservice_test.cpp
